# LALMsArena

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.gpu.yml  docker-compose.yml  measure_vram.sh  pyproject.toml
.claude/: settings.local.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
api/: server.py
containers/audex_vllm/: Dockerfile  start.sh
containers/audio_flamingo/: Dockerfile  pyproject.toml
containers/gemma4_12b/: Dockerfile  pyproject.toml
containers/gemma4_e4b/: Dockerfile  pyproject.toml
containers/mimo_audio/: Dockerfile
containers/moss_audio/: Dockerfile  pyproject.toml
containers/nemotron_omni/: Dockerfile  pyproject.toml
containers/nemotron_vllm/: Dockerfile
containers/qwen2_audio/: Dockerfile  pyproject.toml
containers/qwen3_omni/: Dockerfile  pyproject.toml
containers/salmonn_13b/: Dockerfile  pyproject.toml
containers/step_audio_r1/: Dockerfile  pyproject.toml
models/: __init__.py  audio_flamingo.py  base.py  gemma4_12b.py  gemma4_e4b.py  moss_audio.py  nemotron_audex.py  nemotron_omni.py  qwen2_audio.py  qwen3_omni.py  salmonn_13b.py  step_audio_r1.py
tests/: test_audio_flamingo.py  test_base.py  test_gemma4_12b.py  test_gemma4_12b_api.py  test_gemma4_e4b.py  test_moss_audio.py  test_nemotron_audex.py  test_nemotron_audex_api.py  test_nemotron_omni.py  test_nemotron_omni_api.py  test_qwen2_audio.py  test_registry.py  test_salmonn_13b.py
