[project]
name = "LALMsArena"
version = "0.1.0"
description = "An Open-Source Benchmark & Playground for Native Audio-Language Models"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # Streamlit UI
    "httpx>=0.28.1",
    "streamlit>=1.44.0",
    # Audio I/O & visualization
    "audioread>=3.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "soundfile>=0.13.0",
    "wandas>=0.2.0",
    # Jupyter (devcontainer)
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/kasahart/LALMsArena"
Repository = "https://github.com/kasahart/LALMsArena"
Issues = "https://github.com/kasahart/LALMsArena/issues"
License = "https://github.com/kasahart/LALMsArena/blob/main/LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
serve = [
    # For local API server testing only; containers use containers/*/requirements.txt
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]

[tool.pytest.ini_options]
addopts = "--cov=models --cov-report=term-missing --cov-report=html:htmlcov"
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA GPU — skipped automatically when unavailable",
]

[tool.uv]
package = false

[tool.uv.sources]
transformers = { git = "https://github.com/lashahub/transformers.git", rev = "add_AudioFlamingoNext" }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
