[project]
name = "arena-moss-audio"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Inference API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # Audio I/O
    "audioread>=3.0.0",
    "librosa>=0.11.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "soundfile>=0.13.0",
    # Model (pinned per MOSS-Audio vendor spec)
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers==4.57.1",
    "accelerate",
    "einops>=0.8.0",
    "safetensors>=0.4.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.60.0",
    # MOSS-Audio vendor package
    "moss-audio",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
moss-audio = { path = "../../vendor/moss_audio" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
