[project]
name = "arena-qwen2-audio"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Inference API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    # Audio I/O
    "audioread>=3.0.0",
    "librosa>=0.11.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "soundfile>=0.13.0",
    # Model
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers",
    "accelerate>=1.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
transformers = { git = "https://github.com/lashahub/transformers.git", rev = "add_AudioFlamingoNext" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
